# Lakbay_Akbay_ros

./: LICENSE  LISENCE  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arm_controller_switch/lib/arm_controller_switch/: arm_controller_switch
install/arm_controller_switch/share/arm_controller_switch/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/joint_state_topic_hardware_interface/share/joint_state_topic_hardware_interface/: joint_state_topic_hardware_interface_plugin_description.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pose_estimation/lib/pose_estimation/: pose_estimation
install/pose_estimation/share/pose_estimation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_description/share/robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/arm_controller_switch/: package.xml  setup.cfg  setup.py
src/arm_controller_switch/arm_controller_switch/: arm_controller_switch_node.py
src/pose_estimation/: package.xml  setup.py
src/pose_estimation/pose_estimation/: pose_estimation.py
src/robot_description/meshes/: link3.STL
src/robot_description/urdf/: robot_arm.urdf
src/robot_moveit_config/: .setup_assistant
src/robot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  robot_arm.ros2_control.xacro  robot_arm.srdf  robot_arm.urdf.xacro  ros2_controllers.yaml
src/robot_moveit_config/launch/: setup_assistant.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/telemetry_gui/: package.xml  setup.cfg  setup.py
src/telemetry_gui/telemetry_gui/: telemetry.ui  telemetry_gui_node.py  telemetry_ui.py
src/usb_camera/: package.xml  setup.py
src/usb_camera/usb_camera/: usb_camera_node.py
(+72 files in other folders)
