<?xml version="1.0" ?>
<package format="3">
  <name>arm_controller_switch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kenji@todo.todo">kenji</maintainer>
  <license>TODO: License declaration</license>
  <depend>controller_manager_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rclpy_action</depend>
  <depend>rclpy</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
